--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@syncfusion/ej2-react-schedule": "^18.4.41",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
@@ -13,6 +14,7 @@
     "mongoose": "^5.11.14",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
+    "react-calendar": "^3.3.1",
     "react-dom": "^17.0.1",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
