--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material/button": "^10.0.0",
     "@syncfusion/ej2-react-schedule": "^18.4.41",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
