--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "babel": "^6.23.0",
     "bootstrap": "^4.6.0",
+    "firebase": "^8.2.6",
     "mongoose": "^5.11.14",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
