--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "babel": "^6.23.0",
     "bootstrap": "^4.6.0",
     "firebase": "^8.2.6",
+    "mdb-react-ui-kit": "^1.0.0-alpha2",
+    "mdbreact": "^5.0.1",
     "mongoose": "^5.11.14",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
